--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,32 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# Dependencies
+node_modules/
+
+/node_modules/*
+
+/node_modules
+
+# Optional npm cache directory
+.npm
+
+# Optional build artifacts
+/dist
+/build
+
+# Environment variables
+.env
+.env.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS-specific files
+.DS_Store
+logs/
+*.log
+
