--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,23 @@
-django>=5.0,<6.0
-djangorestframework>=3.15
-django-cors-headers>=4.3
-whitenoise>=6.6
-gunicorn>=22.0
-httpx>=0.27
-openpyxl>=3.1
-python-docx>=1.1
-pymupdf>=1.24
-dj-database-url>=2.1
-psycopg2-binary>=2.9
+anyio==4.12.1
+asgiref==3.11.1
+certifi==2026.1.4
+dj-database-url==3.1.0
+Django==5.2.11
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+et_xmlfile==2.0.0
+gunicorn==25.0.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+lxml==6.0.2
+openpyxl==3.1.5
+packaging==26.0
+psycopg2-binary==2.9.11
+PyMuPDF==1.27.1
+python-docx==1.2.0
+python-dotenv==1.2.1
+sqlparse==0.5.5
+typing_extensions==4.15.0
+whitenoise==6.11.0
